# kakoune

./: CMakeLists.txt
src/: version.cc.in
